cmake_minimum_required(VERSION 3.24)
project(LeetCode)

set(CMAKE_CXX_STANDARD 23)

add_executable(LeetCode RomantoInteger.cpp RomantoInteger.cpp longestCommonPrefix.cpp ValidParentheses.cpp removeDuplicates.cpp plusOne.cpp lengthOfLastWord.cpp climbStairs.cpp deleteDuplicates.cpp merge.cpp generatePascalTriangle1.cpp singleNumber.cpp)
